kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: crud
spec:
  selector:
    app: backend  # 👈 matches the deployment's label
  ports:
    - protocol: TCP
      port: 5000         # Service port
      targetPort: 5000 # Port in container (Node.js app)
      nodePort: 30002
  type: NodePort       # Exposes it on a random port on the node
