kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: crud
spec:
  selector:
    app: frontend  # 👈 matches the deployment's label
  ports:
    - protocol: TCP
      port: 5173         # Service port
      targetPort: 5173 # Port in container (Node.js app)
      nodePort: 30001
  type: NodePort       # Exposes it on a random port on the node
