kubernetes/ingress-controller-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  ports:
    - protocol: TCP
      name: http      # Added name for HTTP port
      port: 80
      targetPort: http
      nodePort: 30776   # NodePort for HTTP
    - protocol: TCP
      name: https     # Added name for HTTPS port
      port: 443
      targetPort: https
      nodePort: 32563   # NodePort for HTTPS
  type: NodePort
