kubernetes/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: crud
spec:
  selector:
    app: mongo  # 👈 matches the deployment's label
  ports:
    - protocol: TCP
      port: 80          # Service port
      targetPort: 27017 # Port in container (Node.js app)
  type: NodePort        # Exposes it on a random port on the node
